# ebolaseq

./: .gitignore  CITATION.cff  LICENSE  README.md  cli.py  core.py  ebolaseq.py  pyproject.toml  remove.txt  requirements.txt  setup.py
.eggs/setuptools_scm-8.3.1-py3.9.egg/EGG-INFO/: requires.txt
conda-recipes/: meta.yaml  setup.py
conda-recipes/ebolaseq/: __init__.py
docs/: MAB_ESCAPE_EPITOPES.md  Methodology.md  README.md
ebolaseq/: __init__.py  _version.py  cli.py  core.py  ebolaseq.py  mab_escape_report.py
ebolaseq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ebolaseq/data/: gp_epitope_watchlist.json  grantham_matrix.json  makona_gp_mature.fasta
scripts/: investigate_dropped.py
tests/: test_ebolaseq.py
