[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ebolaseq/_version.py"
fallback_version = "0.1.3"

[project]
name = "ebolaseq"
description = "A tool for filtering and analyzing Ebola virus sequences"
authors = [{name = "Daan Jansen"}]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.81",
]

[project.scripts]
ebolaseq = "ebolaseq.ebolaseq:cli_main" 